# radar_db_server_v2

./: .env-template  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
backend/: actions.py  celery_main.py  db.py  db_worker.py  harvest.py  server.py  settings.py  setup.py
backend/actions/: harvest.py
backend/config/: settings.py
backend/db/: connections.py  setup.py
backend/src/catalog_data/: get_recent_catalog.py  harvest.py  http_worker.py
backend/src/common/: db_worker.py
backend/src/wb_products_history/: get_db_products.py  harvest.py  http_worker.py  temp_table.py
