[project]
name = "radar-db-v2"
version = "0.1.0"
description = ""
authors = [
    {name = "zwickvitaly",email = "zwickvitaly@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "clickhouse-connect (>=0.8.13,<0.9.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "aiogram (>=3.17.0,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "celery[redis] (>=5.4.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
